--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,49 @@
-/.clj-kondo/
-/.lsp/
-/target/
-/*.odt
+# ------------------------
+# Clojure Project Git Ignore file patterns
+#
+# Ignore all except patterns starting with !
+# Add comments on separate lines, not same line as pattern
+# ------------------------
+
+# ------------------------
+# Ignore everything in root directory
+/*
+
+# ------------------------
+# Common project files
+!CHANGELOG.md
+!README.md
+!LICENSE
+
+# ------------------------
+# Include Clojure project & config
+!build.clj
+!deps.edn
+!pom.xml
+!dev/
+!docs/
+!resources/
+resources/version.edn
+!src/
+!test/
+
+# ------------------------
+# Include Clojure tools
+!.cljstyle
+!.dir-locals.el
+!compose.yaml
+!Dockerfile
+!.dockerignore
+!Makefile
+!tests.edn
+
+# ------------------------
+# Include Git & CI workflow
+!.gitattributes
+!.gitignore
+!.github/
+
+# ------------------------
+# Include ClojureScript Figwheel
+!figwheel-main.edn
+!*.cljs.edn
